--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,6 @@ jobs:
       - name: Deploy to Production
         env:
           HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-          HEROKU_APP_NAME: 'aela-core'
+          HEROKU_APP_NAME: 'utrust-txpay'
         if: github.ref == 'refs/heads/main' && job.status == 'success'
         run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
