--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -45,9 +45,8 @@ jobs:
         with:
           otp-version: 22.2.6
           elixir-version: 1.12.0
-      - name: Deploy to Production
-        env:
-          HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-          HEROKU_APP_NAME: 'utrust-txpay'
-        if: github.ref == 'refs/heads/main' && job.status == 'success'
-        run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/main:main
+      - uses: akhileshns/heroku-deploy@v3.8.8 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_TOKEN}}
+          heroku_app_name: 'utrust-txpay' #Must be unique in Heroku
+          heroku_email: 'paulofabiano@gmail.com'
